--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -172,13 +172,15 @@ h3 {
     font-size: 1em;
     font-weight: 500;
     padding: 2px;
-    transition: font-size 0.5s ease-in-out, opacity 0.25s ease-in-out    
+    transition: font-size 0.5s ease-in-out, opacity 0.25s ease-in-out, color 0.1s
 }
 
 .sphere-label:hover {
-    font-size: 1.25em;
-    opacity: 1;
     cursor: pointer;    
+}
+
+.sphere-label:active {
+    color: #edd;   
 }
 
 .main-title {
@@ -195,28 +197,42 @@ h3 {
     justify-content: space-between;
 }
 
-.social-icons{
+.social-icons-box{
     display: flex;
     justify-content: space-between;
     position: absolute;
-    width: 3em;
-    transform-origin: top left;
+    width: 130px;
+    transform-origin: bottom right;
     color: #eef;
     font-family: 'Roboto Mono', monospace;
-    font-size: 2em;
     bottom: 40px;
     right: 40px;
     z-index: 10;    
 }
 
-.social-icons i{
-    transition: color 0.25s ease-in-out;
+.social-icons{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #eef;
+    border-radius: 5px;
+    font-size: 1.5em;
+    min-width: 40px;
+    height: 40px;
+    transition: background-color 0.5s ease-in-out;
 }
 
-.social-icons i:hover {
-    color: #669;
-    cursor: pointer;
-    transition: color 0.25s ease-in-out;
+.social-icons i{
+    color: #fff;
+}
+
+.social-icons:hover {
+    background-color: #669;
+}
+
+.social-icons:active {
+    background-color: #edd;
+    transition: background-color 0.1s;
 }
 
 #backToBoxTop i:hover {
