Skills content insert

--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -288,15 +288,16 @@ h4 {
 }
 
 .percent-container {
-    max-width: 480px;
+    max-width: 100%;
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;    
     justify-content: center;
 }
 
 .percent-box {
-    min-width: 160px;
-    min-height: 160px;
+    min-width: 140px;
+    min-height: 140px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -374,10 +375,6 @@ h4 {
     font-weight: 500;
     font-family: 'Roboto Mono', sans-serif;
     text-align: center;    
-}
-
-.perc-label a:hover {
-    cursor: help;
 }
 
 .loading-box {
