--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -242,8 +242,7 @@ h4 {
 .social-icons-box{
     display: flex;
     justify-content: space-between;
-    position: absolute;
-    width: 130px;
+    position: absolute;    
     transform-origin: bottom right;
     color: #eef;
     font-family: 'Roboto Mono', monospace;
@@ -262,6 +261,7 @@ h4 {
     font-size: 20px;
     width: 40px;
     height: 40px;
+    margin: 5px;
     transition: background-color 0.5s ease-in-out;
 }
 
